Fix poor colour contrast on label cells
Continuting progess towards #117, this commit fixes the colour contrast
in the label cells for displayed property results

--- a/app/assets/stylesheets/_search-results.scss
+++ b/app/assets/stylesheets/_search-results.scss
@@ -8,4 +8,12 @@
   .property-heading {
     font-size: 1.25em;
   }
+
+  .property-details-field-title {
+    color: #444;
+    text-align: right;
+    padding-right: 10px;
+    width: 50%;
+    font-size: 14px;
+  }
 }
