--- a/app/assets/stylesheets/ppd.scss
+++ b/app/assets/stylesheets/ppd.scss
@@ -63,14 +63,6 @@
     margin-left: 10px;
   }
 
-  .property-details-field-title {
-    color: #777;
-    text-align: right;
-    padding-right: 10px;
-    width: 50%;
-    font-size: 14px;
-  }
-
  .detailed-address {
     table {
       td {
